--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -12,6 +12,11 @@
   color: var(--bg-color);
   text-decoration: none;
   font-family: var(--head-font);
+  font-size: large;
+}
+
+.navbar-brand {
+  text-shadow: 2px 2px 2px var(--text-color);
 }
 
 .nav-item {
@@ -19,17 +24,26 @@
   justify-content: space-between;
   align-items: center;
   gap: 5px;
+  filter: drop-shadow(1px 1px 3px var(--text-color));
+  font-size: x-large;
+}
+
+:root.dark .nav-item,
+:root.dark .navbar-brand {
+  filter: none;
+  text-shadow: none;
 }
 
 .nav-item:hover,
 .navbar-brand:hover {
   cursor: pointer;
   color: var(--accent);
-  transition: 0.2s;
+  transition: 0.3s;
+  text-shadow: 2px 2px 2px var(--primary);
 }
 
 .nav-item:hover {
-  transform: scale(1.3);
+  transform: scale(1.4) rotate(-10deg);
 }
 
 .nav-item-text {
@@ -51,6 +65,7 @@
 .navbar-tooltip:nth-child(1) {
   color: var(--accent) !important;
 }
+
 @media (max-width: 992px) {
   .navbar-collapse {
     justify-content: center;
